--- a/vignettes/cardidates.bib
+++ b/vignettes/cardidates.bib
@@ -45,15 +45,14 @@
   address = {Vienna, Austria},
   year = {2007},
   note = {{ISBN} 3-900051-07-0},
-  url = {http://www.R-project.org},
+  url = {http://www.R-project.org}
 }
 
 @Manual{boot-package,
   title = {boot: Bootstrap R (S-Plus) Functions (Canty)},
   author = {Ripley, Brian},
-  note = {S original by Angelo Canty, R port by Brian Ripley.},
-  year = {2007},
-  note = {R package version 1.2-30},
+  note = {R package version 1.2-30, S original by Angelo Canty, R port by Brian Ripley.},
+  year = {2007}
 }
 
 @Manual{pastecs-package,
@@ -61,7 +60,7 @@
   author = {Frederic Ibanez and Philippe Grosjean & Michele Etienne},
   year = {2006},
   note = {R package version 1.3-4},
-  url = {http://www.sciviews.org/pastecs},
+  url = {http://www.sciviews.org/pastecs}
 }
 
 @PHDTHESIS{Petzoldt1996,
@@ -73,3 +72,13 @@
   type = {Dissertation},
   language = {german}
 }
+
+ @Book{lattice,
+    title = {Lattice: Multivariate Data Visualization with R},
+    author = {Deepayan Sarkar},
+    publisher = {Springer},
+    address = {New York},
+    year = {2008},
+    note = {ISBN 978-0-387-75968-5},
+    url = {http://lmdvr.r-forge.r-project.org}
+  }
